test('test');
// // @flow
// import Button from '../../components/button';
// import { createExpectRender } from './utils';
//
// const theme = {
//   typography: {
//     fontSize: level => level * 2 + 16, // 0 = 16, 1 = 18, -1 = 14 etc.
//     rhythm: ratio => ratio * 24,
//     lineHeight: 24,
//   },
//   colors: {
//     primary: 'blue',
//     success: 'green',
//     warning: 'orange',
//     danger: 'red',
//     black: 'black',
//     white: 'white',
//     gray: 'gray',
//   },
//   text: {
//     bold: 600,
//     color: 'black',
//     // github.com/twbs/bootstrap/blob/v4-dev/scss/_variables.scss
//     fontFamily: '-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif',
//     rawStyle: {
//       fixFontSmoothing: true,
//     },
//   },
//   button: {
//     borderRadius: 2,
//     borderWidth: 1,
//     marginHorizontal: 0.25,
//     marginVertical: 0.3,
//     paddingVertical: 0.2,
//     disabledOpacity: 0.5,
//   },
// };
//
// const expectRender = createExpectRender(theme);
//
// test('render', () => {
//   expectRender(() => <Button />);
// });
//
// test('primary', () => {
//   expectRender(() => <Button primary />);
// });
//
// test('primary outline', () => {
//   expectRender(() => <Button primary outline />);
// });
//
// test('disabled', () => {
//   expectRender(() => <Button disabled />);
// });
